welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:12: error: not enough arguments for method marquer: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  marquer()
         ^