welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def fleur (c : Color){
  setCouleurCorps(c)
  baisseBrosse()
  move(2, true)
  recule()
  gauche()
  avance()
  move(2,false)
  avance()
  leveBrosse()
  setCouleurCorps(Color.YELLOW)
  marquer()
}


def marquer(c : Color) {
  setCouleurBrosse(c : Color)
  baisseBrosse()
  leveBrosse()
  gauche()
}


def move(nbPas: Int,versLAvant: Boolean) {
  if (versLAvant){
    for (i <- 1 to nbPas){avance()}
  }
  else {for (i <- 1 to nbPas){recule()}}
    
}